--- a/Задача_о_назначениях/Задача_о_назначениях.vcxproj
+++ b/Задача_о_назначениях/Задача_о_назначениях.vcxproj
@@ -152,6 +152,7 @@
     <ClCompile Include="items.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="element.h" />
     <ClInclude Include="logic.h" />
     <ClInclude Include="masterheader.h" />
     <ClInclude Include="items.h" />
