--- a/Задача_о_назначениях/Задача_о_назначениях.vcxproj.filters
+++ b/Задача_о_назначениях/Задача_о_назначениях.vcxproj.filters
@@ -41,5 +41,8 @@
     <ClInclude Include="masterheader.h">
       <Filter>Заголовочные файлы</Filter>
     </ClInclude>
+    <ClInclude Include="element.h">
+      <Filter>Заголовочные файлы</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
